--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     <canvas id="sales-chart"></canvas>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pnotify/5.2.0/PNotify.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="./index.js"></script>
     <script type="module" src="./chartData.js"></script>
+
 </body>
 </html>
